vlib/v/checker/tests/orm_not_a_struct.vv
import sqlite

enum Person {
	test
}

fn main() {
	db := sqlite.connect(':memory:')!
	_ := sql db {
		select from Person
	}
}
